# top_bcgo

./: .gitignore  add_2022.ipynb  playground.ipynb  populate_db.py  pyproject.toml  run.py  tasks.py
docker/: Dockerfile  docker-compose.yml
top_bgco/: __init__.py  main.py
